--- a/views/admin-login.ejs
+++ b/views/admin-login.ejs
@@ -9,7 +9,7 @@
   <body class="admin-page">
     <main class="container narrow">
       <section class="card">
-        <h1>Admin Login</h1>
+        <h1><a href="/" class="title-link">Admin Login</a></h1>
         <% if (error) { %>
           <p class="alert error"><%= error %></p>
         <% } %>
