fixing video bug

--- a/public/styles.css
+++ b/public/styles.css
@@ -191,10 +191,10 @@ input[type='file'] {
 
 .file-input-hidden {
   position: absolute;
+  left: -9999px;
   width: 1px;
   height: 1px;
   opacity: 0;
-  pointer-events: none;
 }
 
 input[type='text']:focus,
