--- a/views/admin-photos.ejs
+++ b/views/admin-photos.ejs
@@ -91,6 +91,24 @@
           </article>
         <% }) %>
       </section>
+
+      <% if (totalPages > 1) { %>
+        <section class="card pagination-row">
+          <% if (page > 1) { %>
+            <a class="page-link" href="<%= activeTab === 'videos' ? '/admin/videos' : '/admin/photos' %>?page=<%= page - 1 %>">Previous</a>
+          <% } else { %>
+            <span class="page-link disabled">Previous</span>
+          <% } %>
+
+          <p class="small-note page-label">Page <strong><%= page %></strong> of <strong><%= totalPages %></strong></p>
+
+          <% if (page < totalPages) { %>
+            <a class="page-link" href="<%= activeTab === 'videos' ? '/admin/videos' : '/admin/photos' %>?page=<%= page + 1 %>">Next</a>
+          <% } else { %>
+            <span class="page-link disabled">Next</span>
+          <% } %>
+        </section>
+      <% } %>
     </main>
   </body>
 </html>
